--- a/example/example.html
+++ b/example/example.html
@@ -20,8 +20,9 @@
       {"wof:name": {"order": "desc"}},
       {"wof:scale": {"mode": "max", "order": "desc"}},
       {"geom:area": {"mode": "max", "order": "desc"}}],
-      "misc": ["wub", "wub", "wub" ],
-      "extra": [[1,2,3], {"hello": "world"}]};
+      // "misc": ["wub", "wub", "wub" ],
+      // "extra": [[1,2,3], {"hello": "world"}]
+      };
 
       var target = "yesnofix";
 
