big syntax error in CSS file; remove old files and documentation

--- a/example/example.html
+++ b/example/example.html
@@ -3,9 +3,8 @@
   <head>
     <title>yes/no/fix</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript" src="../src/mapzen.whosonfirst.php.js"></script>
     <script type="text/javascript" src="../src/mapzen.whosonfirst.yesnofix.js"></script>
-    <link rel="stylesheet" type="text/css" href="example.css" />
+    <link rel="stylesheet" type="text/css" href="../src/mapzen.whosonfirst.yesnofix.css" />
    </head>
   <body>
 
